--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 			<div class ='main-content'>
 				<div class ='house-video'>
-						<p> just making sure </p>
+						<p> just making sure. </p>
 				</div>
 			</div>
 
